--- a/test.ipynb
+++ b/test.ipynb
@@ -16,40 +16,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### HANDLING CATEGORICAL DATA ###\n",
+    "\n",
+    "#Label encoding for EPC from A to F replaced by from 1 to 6\n",
+    "order = ['A', 'B', 'C', 'D', 'E', 'F']\n",
+    "category_mapping = {category: rank for rank, category in enumerate(order, start=1)}\n",
+    "df['EPC_encoded'] = df['epc'].map(category_mapping)\n",
+    "df=df.drop(['epc'],axis = 1)\n",
+    "\n",
+    "#One hot encoding for kitchen type\n",
+    "dummies = pd.get_dummies(df['Kitchen_type'], prefix='Kitchen')\n",
+    "df=pd.concat([df, dummies], axis = 1)\n",
+    "df=df.drop(['Kitchen_type','Kitchen_Not installed'],axis = 1)\n",
+    "\n",
+    "#One hot encoding for province (when no province as True => Brussels)\n",
+    "dummies = pd.get_dummies(df['Province'])\n",
+    "df=pd.concat([df, dummies], axis = 1)\n",
+    "df=df.drop(['Province','Brussels'],axis = 1)\n",
+    "\n",
+    "#One hot encoding for State of building (when no state as True => As_new)\n",
+    "dummies = pd.get_dummies(df['State_of_building'], prefix=\"State\")\n",
+    "df=pd.concat([df, dummies], axis = 1)\n",
+    "df=df.drop(['State_of_building','State_As new'],axis = 1)\n",
+    "display(df)"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## input (10)\n",
-    "{\n",
-    "  \"data\": {\n",
-    "    \"Number_of_bedrooms\": int #2 to 5,\n",
-    "    \"Living_area\": int, #50 to 300\n",
-    "    \"Open_fire\": bool,\n",
-    "    \"Swimming_Pool\": bool,\n",
-    "    \"Kitchen_type\": [\"Installed\"|\"Hyper equipped\"|\"Semi equipped\"|\"Not installed \"]\n",
-    "    \"Number_of_facades': int,\n",
-    "    \"State_of_building\": [\"As new\"|\"Good\"|\"Just renovated\"|\"To be done up\"|\"To renovate\"]\n",
-    "    \"epc\": [\"A\"|\"B\"|\"C\"|\"D\"|\"E\"|\"F\"],\n",
-    "    \"landSurface\": int ## 0 to 1200,\n",
-    "    \"Province\": [\"Brussels\"|\"Antwerp\"|\"Brabant_Wallon\"|\"Flemish Brabant\"|\"Liège\"|\"Namur\"|\"Luxembourg\"|\"Hainaut\"|\"West Flanders\"|\"East Flanders\"|\"Limburg\"]\n",
-    "    }\n",
-    "}  \n",
+    "import json\n",
+    "from catboost import CatBoostRegressor\n",
     "\n",
-    "## output\n",
-    "{\n",
-    "  \"prediction\": Optional[float],\n",
-    "  \"status_code\": Optional[int]\n",
-    "}\n",
+    "# Load the model\n",
+    "model = CatBoostRegressor()\n",
+    "model = model.load_model(r\"C:\\repos\\immo-eliza-ml\\CB_model\", format='cbm')\n",
     "\n",
-    "## example input (10)\n",
-    "(3, 150, False, False, \"Installed\", 3, \"Good\", \"A\", 450, \"East Flanders\" )\n",
-    "\n",
-    "\n",
-    "\n",
-    "import requests"
+    "# Function to read JSON input file, make prediction, and output JSON\n",
+    "def make_prediction(input_json_path, output_json_path):\n",
+    "    with open(input_json_path, 'r') as input_file:\n",
+    "        dict_input = json.load(input_file) \n",
+    "        input_list = list(dict_input.values())\n",
+    "        prediction = model.predict(input_list)\n",
+    "    with open(output_json_path, 'w') as output_file:\n",
+    "        json.dump(prediction,output_file)    \n",
+    "\n"
    ]
   }
  ],
