--- a/test.ipynb
+++ b/test.ipynb
@@ -65,6 +65,31 @@
     "        json.dump(prediction,output_file)    \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "C:\\repos\\immo-eliza-ml\\poilynomia_features_model\n",
+    "C:\\repos\\immo-eliza-ml\\themodel\n",
+    "\n",
+    "\n",
+    "joblib.dump(poly_reg_model, 'themodel')\n",
+    "joblib.dump(poly, 'poilynomia_features_model')\n",
+    "\n",
+    "# load and predict\n",
+    "poilynomia_features_model = joblib.load('poilynomia_features_model')\n",
+    "themodel = joblib.load('themodel')\n",
+    "\n",
+    "X_val_prep = poilynomia_features_model.transform(X_test)\n",
+    "predictions = themodel.predict(X_val_prep)\n",
+    "\n",
+    "\n",
+    "print(\"RMSE on test data is: \", root_mean_squared_error(y_test, predictions))\n",
+    "\n",
+    "r2 = r2_score(y_test, predictions)\n",
+    "print(\"R2 Score with real prices:\", r2)"
+   ]
   }
  ],
  "metadata": {
